2008-08-06  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* startup.el (command-line-ns-option-alist): Use ignore instead of
	ns-ignore-0-arg.

	* term/ns-win.el (ns-ignore-0-arg, mouse-extend-region)
	(ns-win-suspend-error, ns-yes-or-no-p, colors): Drop.
	(ns-alternatives-map): New variable.
	(x-set-up-function-keys): Use it.
	(global): Comment out "put backspace ascii-character..." and friends.
	Move function-key-map into ns-alternatives-map.  Don't call
	precompute-menubar-bindings.  Don't set anything connected with
	browse-url.
	(after-make-frame-functions): Clarify comment why a hook is added.

2008-08-06  Joakim Verona  <joakim@verona.se>

	* thingatpt.el (thing-at-point-url-path-regexp): Allow parenthesis
	in url:s.

2008-08-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-svn.el (vc-svn-parse-status): Use when instead of if.
	Fix 2008-01-01 change: use a shy group to not affect subsequent
	match calls.

2008-08-06  Reto Zimmermann  <reto@gnu.org>

	* progmodes/vera-mode.el (vera-electric-tab):
	* progmodes/vhdl-mode.el (vhdl-electric-tab): Make TAB indent
	region when active.

2008-08-06  Kenichi Handa  <handa@m17n.org>

	* faces.el (face-valid-attribute-values): Fix handling the value
	of (font-family-list) and font-XXX-table.

2008-08-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* proced.el (proced-menu): Bind the correct function to for toggling.

	* vc-dir.el (vc-dir-mode): Fix typo.

2008-08-06  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el (whitespace-newline-mode)
	(global-whitespace-newline-mode, whitespace-mode)
	(global-whitespace-mode): Improve docstring.

2008-08-05  Chong Yidong  <cyd@stupidchicken.com>

	* kmacro.el (kmacro-exec-ring-item): Add autoload.

	* files.el (auto-save-visited-file-name): Move definition to fileio.c.

	* cus-start.el (all): Handle auto-save-visited-file-name.

2008-08-05  Alex Shinn  <alexshinn@gmail.com>  (tiny change)

	* files.el (hack-one-local-variable-eval-safep): Handle